--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0209.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0209.html
@@ -676,9 +676,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 73 1375 1882 1443">
-        <span id="w_129" class="ocr_word" title="bbox 73 1393 98 1424">
+        <span id="w_129_0" class="ocr_word" title="bbox 73 1393 98 1424">
           <span class="alternatives">
-            <ins title="nlp 2.00">c</ins>
+            <ins class="alt" title="nlp 2.00">C</ins>
+          </span>
+        </span>
+        <span id="w_129_1" class="ocr_word" title="bbox 73 1393 98 1424">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_130" class="ocr_word" title="bbox 125 1394 214 1440" lang="grc">
@@ -724,11 +729,6 @@
         <span id="w_138" class="ocr_word" title="bbox 1736 1397 1816 1427" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ἐκκλησίαν</ins>
-          </span>
-        </span>
-        <span id="w_139" class="ocr_word" title="bbox 1843 1401 1882 1433">
-          <span class="alternatives">
-            <ins title="nlp 2.00">15</ins>
           </span>
         </span>
       </span>
