--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0210.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0210.html
@@ -982,9 +982,9 @@
             <ins class="alt" title="nlp 1.00">μόνον</ins>
           </span>
         </span>
-        <span id="w_197" class="ocr_word" title="bbox 1904 1861 1926 1894">
+        <span id="w_197_0" class="ocr_word" title="bbox 1904 1861 1926 1894">
           <span class="alternatives">
-            <ins title="nlp 2.00">c</ins>
+            <ins class="alt" title="nlp 2.00">C</ins>
           </span>
         </span>
       </span>
