--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0211.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0211.html
@@ -408,12 +408,12 @@
             <ins class="alt" title="nlp 1.00">νεότητος</ins>
           </span>
         </span>
-        <span id="w_78_0" class="ocr_word" title="bbox 1170 930 1272 985">
+        <span id="w_78_0_0" class="ocr_word" title="bbox 1170 930 1272 985">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
-        <span id="w_78_1" class="ocr_word" title="bbox 1170 930 1272 985">
+        <span id="w_78_0_1" class="ocr_word" title="bbox 1170 930 1272 985">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -426,11 +426,6 @@
         <span id="w_80" class="ocr_word" title="bbox 1444 929 1502 979" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τά</ins>
-          </span>
-        </span>
-        <span id="w_81" class="ocr_word" title="bbox 1538 950 1586 980" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τε</ins>
           </span>
         </span>
       </span>
