--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0196.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0196.html
@@ -148,19 +148,14 @@
         </span>
         <span id="w_26" class="ocr_word" title="bbox 1674 473 1907 521" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μεμετρη-</ins>
+            <ins title="nlp 2.00">μεμετρημένας</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 230 531 1910 608">
-        <span id="w_27" class="ocr_word" title="bbox 230 544 381 608" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μένας</ins>
-          </span>
-        </span>
         <span id="w_28" class="ocr_word" title="bbox 418 540 503 601" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὰς</ins>
+            <ins title="nlp 2.00">τὰς</ins>
           </span>
         </span>
         <span id="w_29" class="ocr_word" title="bbox 541 539 777 596" lang="grc">
@@ -279,16 +274,11 @@
         </span>
         <span id="w_51" class="ocr_word" title="bbox 1737 685 1910 752" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐκπέμ-</ins>
+            <ins title="nlp 2.00">ἐκπέμπειν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 227 763 1910 831">
-        <span id="w_52" class="ocr_word" title="bbox 227 790 341 823" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πειν</ins>
-          </span>
-        </span>
         <span id="w_53" class="ocr_word" title="bbox 377 789 490 829" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοὺς</ins>
@@ -556,16 +546,11 @@
         </span>
         <span id="w_105" class="ocr_word" title="bbox 1660 1142 2007 1228" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μεθαρμο-</ins>
+            <ins title="nlp 2.00">μεθαρμοσάμενος</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 228 1220 2006 1298">
-        <span id="w_106" class="ocr_word" title="bbox 228 1233 436 1298" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σάμενος</ins>
-          </span>
-        </span>
         <span id="w_107" class="ocr_word" title="bbox 482 1251 571 1296" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὴν</ins>
@@ -853,9 +838,9 @@
             <ins class="alt" title="nlp 1.00">ἰσχύοντες</ins>
           </span>
         </span>
-        <span id="w_163" class="ocr_word" title="bbox 1786 1714 1907 1763" lang="grc">
+        <span id="w_163_0" class="ocr_word" title="bbox 1786 1714 1907 1763">
           <span class="alternatives">
-            <ins title="nlp 2.00">προ-</ins>
+            <ins class="alt" title="nlp 2.00">προκατεπτοημένοι</ins>
           </span>
         </span>
       </span>
@@ -863,11 +848,6 @@
         <span id="w_164" class="ocr_word" title="bbox 166 1789 207 1822">
           <span class="alternatives">
             <ins title="nlp 2.00">20</ins>
-          </span>
-        </span>
-        <span id="w_165" class="ocr_word" title="bbox 227 1771 604 1836" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">κατεπτοημένοι</ins>
           </span>
         </span>
         <span id="w_166" class="ocr_word" title="bbox 650 1792 787 1833" lang="grc">
