--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0215.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0215.html
@@ -981,9 +981,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 129 2620 1815 2690">
-        <span id="w_191" class="ocr_word" title="bbox 334 2626 446 2689" lang="grc">
+        <span id="w_191_0" class="ocr_word" title="bbox 334 2626 446 2689">
           <span class="alternatives">
-            <ins title="nlp 2.00">(οὐκ</ins>
+            <ins class="alt" title="nlp 2.00">(οὐκ</ins>
+          </span>
+        </span>
+        <span id="w_191_1" class="ocr_word" title="bbox 334 2626 446 2689">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_192" class="ocr_word" title="bbox 485 2626 743 2675" lang="grc">
@@ -1009,11 +1014,6 @@
         <span id="w_196" class="ocr_word" title="bbox 1274 2622 1703 2690" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καταρραγέντος),</ins>
-          </span>
-        </span>
-        <span id="w_197" class="ocr_word" title="bbox 1748 2643 1815 2683" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὡς</ins>
           </span>
         </span>
       </span>
@@ -1117,7 +1117,7 @@
         </span>
         <span id="w_217" class="ocr_word" title="bbox 1504 2810 1773 2855">
           <span class="alternatives">
-            <ins title="nlp 2.00">delendum’</ins>
+            <ins title="nlp 2.00">’</ins>
           </span>
         </span>
         <span id="w_218" class="ocr_word" title="bbox 1797 2823 1817 2851">
