--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0197.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0197.html
@@ -102,16 +102,11 @@
         </span>
         <span id="w_17" class="ocr_word" title="bbox 1632 376 1803 423" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καρτε-</ins>
+            <ins title="nlp 2.00">καρτερώτατος</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 112 432 1802 503">
-        <span id="w_18" class="ocr_word" title="bbox 112 436 325 503" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ρώτατος</ins>
-          </span>
-        </span>
         <span id="w_19" class="ocr_word" title="bbox 362 455 445 484" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -619,16 +614,11 @@
         </span>
         <span id="w_116" class="ocr_word" title="bbox 1670 1210 1805 1277" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πρώ-</ins>
+            <ins title="nlp 2.00">πρώτως</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 111 1287 1803 1352">
-        <span id="w_117" class="ocr_word" title="bbox 111 1309 205 1349" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τως</ins>
-          </span>
-        </span>
         <span id="w_118" class="ocr_word" title="bbox 244 1308 376 1338" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">αὐτῷ</ins>
@@ -1455,9 +1445,9 @@
             <ins class="alt" title="nlp 1.00">μικρὸν</ins>
           </span>
         </span>
-        <span id="w_281" class="ocr_word" title="bbox 1727 2703 1806 2750" lang="grc">
+        <span id="w_281_0" class="ocr_word" title="bbox 1727 2703 1806 2750">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐγ-</ins>
+            <ins class="alt" title="nlp 2.00">ἐγχώραις]</ins>
           </span>
         </span>
       </span>
@@ -1465,11 +1455,6 @@
         <span id="w_282" class="ocr_word" title="bbox 229 2856 282 2895">
           <span class="alternatives">
             <ins title="nlp 2.00">29</ins>
-          </span>
-        </span>
-        <span id="w_283" class="ocr_word" title="bbox 314 2849 509 2909" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">χώραις]</ins>
           </span>
         </span>
         <span id="w_284" class="ocr_word" title="bbox 544 2849 709 2904" lang="grc">
