--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0217.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0217.html
@@ -263,9 +263,14 @@
             <ins class="alt" title="nlp 1.00">στῆναι</ins>
           </span>
         </span>
-        <span id="w_48" class="ocr_word" title="bbox 296 695 515 757" lang="grc">
+        <span id="w_48_0" class="ocr_word" title="bbox 296 695 515 757">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἔφθασε</ins>
+            <ins class="alt" title="nlp 2.00">(ἔφθασε</ins>
+          </span>
+        </span>
+        <span id="w_48_1" class="ocr_word" title="bbox 296 695 515 757">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_49" class="ocr_word" title="bbox 553 714 647 760" lang="grc">
@@ -296,11 +301,6 @@
         <span id="w_54" class="ocr_word" title="bbox 1343 691 1588 761" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μάρτυρος</ins>
-          </span>
-        </span>
-        <span id="w_55" class="ocr_word" title="bbox 1618 701 1773 746" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐκεῖσε</ins>
           </span>
         </span>
       </span>
