--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0219.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0219.html
@@ -1284,9 +1284,9 @@
             <ins class="alt" title="nlp 1.00">προὐτίθετο</ins>
           </span>
         </span>
-        <span id="w_248" class="ocr_word" title="bbox 1580 2450 1778 2520" lang="grc">
+        <span id="w_248_0" class="ocr_word" title="bbox 1580 2450 1778 2520">
           <span class="alternatives">
-            <ins title="nlp 2.00">(βρέβια</ins>
+            <ins class="alt" title="nlp 2.00">(βρέβια</ins>
           </span>
         </span>
       </span>
@@ -1419,7 +1419,7 @@
       <span class="ocr_line" title="bbox 90 2794 1778 2854">
         <span id="w_275" class="ocr_word" title="bbox 316 2799 392 2842">
           <span class="alternatives">
-            <ins title="nlp 2.00">sit’ </ins>
+            <ins title="nlp 2.00">’ </ins>
           </span>
         </span>
         <span id="w_276" class="ocr_word" title="bbox 427 2814 446 2841">
