--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0198.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0198.html
@@ -388,9 +388,14 @@
             <ins title="nlp 2.00">Ἄσπρας</ins>
           </span>
         </span>
-        <span id="w_73" class="ocr_word" title="bbox 765 904 1072 970" lang="grc">
+        <span id="w_73_0" class="ocr_word" title="bbox 765 904 1072 970">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐκκλησίας.</ins>
+            <ins class="alt" title="nlp 2.00">Ἐκκλησίας.</ins>
+          </span>
+        </span>
+        <span id="w_73_1" class="ocr_word" title="bbox 765 904 1072 970">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_74" class="ocr_word" title="bbox 1134 924 1219 954" lang="grc">
@@ -406,11 +411,6 @@
         <span id="w_76" class="ocr_word" title="bbox 1580 903 1758 974" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">χρόνον</ins>
-          </span>
-        </span>
-        <span id="w_77" class="ocr_word" title="bbox 1782 908 1892 958" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">διατρίβοντος</ins>
           </span>
         </span>
       </span>
@@ -541,16 +541,11 @@
         </span>
         <span id="w_103" class="ocr_word" title="bbox 1851 1159 1892 1190" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐ-</ins>
+            <ins title="nlp 2.00">ἐφωράθησαν.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 210 1214 1892 1283">
-        <span id="w_104" class="ocr_word" title="bbox 210 1215 533 1283" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φωράθησαν.</ins>
-          </span>
-        </span>
         <span id="w_105" class="ocr_word" title="bbox 583 1237 665 1266" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -1334,7 +1329,7 @@
       <span class="ocr_line" title="bbox 328 2662 1916 2741">
         <span id="w_264" class="ocr_word" title="bbox 328 2677 352 2714" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">3 Σωσκοῦ</ins>
+            <ins title="nlp 2.00">Σωσκοῦ</ins>
           </span>
         </span>
         <span id="w_265" class="ocr_word" title="bbox 709 2682 736 2719">
