--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0199.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0199.html
@@ -386,7 +386,7 @@
         </span>
         <span id="w_72" class="ocr_word" title="bbox 561 904 981 972" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00"> μεγαλομάρτυρος</ins>
+            <ins title="nlp 2.00">μεγαλομάρτυρος</ins>
           </span>
         </span>
         <span id="w_73" class="ocr_word" title="bbox 1011 906 1260 971" lang="grc">
@@ -1486,7 +1486,7 @@
         </span>
         <span id="w_285" class="ocr_word" title="bbox 733 2852 963 2895">
           <span class="alternatives">
-            <ins title="nlp 2.00">Peneus?᾿ </ins>
+            <ins title="nlp 2.00">᾿ </ins>
           </span>
         </span>
         <span id="w_286" class="ocr_word" title="bbox 988 2867 1007 2896">
