--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0215.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0215.html
@@ -274,9 +274,14 @@
             <ins class="alt" title="nlp 1.00">φερούσης</ins>
           </span>
         </span>
-        <span id="w_50" class="ocr_word" title="bbox 1026 1386 1196 1450" lang="grc">
+        <span id="w_50_0" class="ocr_word" title="bbox 1026 1386 1196 1450">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἔχετο.</ins>
+            <ins class="alt" title="nlp 2.00">εἴχετο.</ins>
+          </span>
+        </span>
+        <span id="w_50_1" class="ocr_word" title="bbox 1026 1386 1196 1450">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_51" class="ocr_word" title="bbox 1261 1398 1360 1433" lang="grc">
@@ -297,11 +302,6 @@
         <span id="w_54" class="ocr_word" title="bbox 1540 1383 1683 1443" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">θέσις</ins>
-          </span>
-        </span>
-        <span id="w_55" class="ocr_word" title="bbox 1722 1402 1807 1433" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
       </span>
@@ -1068,9 +1068,9 @@
             <ins class="alt" title="nlp 1.00">βουλὴν</ins>
           </span>
         </span>
-        <span id="w_208" class="ocr_word" title="bbox 1703 2701 1817 2764" lang="grc">
+        <span id="w_208_0" class="ocr_word" title="bbox 1703 2701 1817 2764">
           <span class="alternatives">
-            <ins title="nlp 2.00">βου-</ins>
+            <ins class="alt" title="nlp 2.00">βουπεριφράξας</ins>
           </span>
         </span>
       </span>
@@ -1078,11 +1078,6 @@
         <span id="w_209" class="ocr_word" title="bbox 214 2819 241 2856">
           <span class="alternatives">
             <ins title="nlp 2.00">4</ins>
-          </span>
-        </span>
-        <span id="w_210" class="ocr_word" title="bbox 262 2811 564 2868" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">περιφράξας</ins>
           </span>
         </span>
         <span id="w_211" class="ocr_word" title="bbox 655 2818 704 2856">
@@ -1115,14 +1110,14 @@
             <ins title="nlp 2.00">Βρυέννιον</ins>
           </span>
         </span>
-        <span id="w_217" class="ocr_word" title="bbox 1504 2810 1773 2855">
+        <span id="w_217_0" class="ocr_word" title="bbox 1504 2810 1773 2855">
           <span class="alternatives">
-            <ins title="nlp 2.00">’</ins>
+            <ins class="alt" title="nlp 2.00">delendum'</ins>
           </span>
         </span>
-        <span id="w_218" class="ocr_word" title="bbox 1797 2823 1817 2851">
+        <span id="w_217_1" class="ocr_word" title="bbox 1504 2810 1773 2855">
           <span class="alternatives">
-            <ins title="nlp 2.00">s</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1157,9 +1152,9 @@
             <ins title="nlp 2.00">ἐνεδίδου</ins>
           </span>
         </span>
-        <span id="w_225" class="ocr_word" title="bbox 1494 2866 1529 2909">
+        <span id="w_225_0" class="ocr_word" title="bbox 1494 2866 1529 2909">
           <span class="alternatives">
-            <ins title="nlp 2.00">E</ins>
+            <ins class="alt" title="nlp 2.00">F</ins>
           </span>
         </span>
       </span>
