--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0231.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0231.html
@@ -231,23 +231,18 @@
             <ins class="alt" title="nlp 1.00">ἀποκλίνωσιν</ins>
           </span>
         </span>
-        <span id="w_45" class="ocr_word" title="bbox 1646 622 1802 656" lang="grc">
+        <span id="w_45_0" class="ocr_word" title="bbox 1646 622 1802 656">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἅπαν-</ins>
+            <ins class="alt" title="nlp 2.00">ἕπαντες,</ins>
           </span>
         </span>
-        <span id="w_46" class="ocr_word" title="bbox 1826 619 1846 651">
+        <span id="w_45_1" class="ocr_word" title="bbox 1646 622 1802 656">
           <span class="alternatives">
-            <ins title="nlp 2.00">5</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 112 677 1805 748">
-        <span id="w_47" class="ocr_word" title="bbox 112 702 205 747" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">τες,</ins>
-          </span>
-        </span>
         <span id="w_48" class="ocr_word" title="bbox 245 681 367 732" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κατὰ</ins>
