--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0224.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0224.html
@@ -299,9 +299,9 @@
             <ins class="alt" title="nlp 1.00">καλούμενον</ins>
           </span>
         </span>
-        <span id="w_58" class="ocr_word" title="bbox 1836 683 1920 744" lang="grc">
+        <span id="w_58_0" class="ocr_word" title="bbox 1836 683 1920 744">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὃν</ins>
+            <ins class="alt" title="nlp 2.00">(ὃν</ins>
           </span>
         </span>
       </span>
