--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0241.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0241.html
@@ -1432,7 +1432,7 @@
         </span>
         <span id="w_279" class="ocr_word" title="bbox 806 2773 915 2828" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">5 περὶ</ins>
+            <ins title="nlp 2.00">περὶ</ins>
           </span>
         </span>
         <span id="w_280" class="ocr_word" title="bbox 957 2786 1032 2815">
