--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0168.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0168.html
@@ -217,13 +217,7 @@
         </span>
         <span id="w_39" class="ocr_word" title="bbox 224 630 478 696" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">προγόνων</ins>
-          </span>
-        </span>
-        <span id="w_40" class="ocr_word" title="bbox 491 646 500 657">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins class="alt" title="nlp 2.00">προγόνων·</ins>
           </span>
         </span>
         <span id="w_41" class="ocr_word" title="bbox 548 626 629 676" lang="grc">
@@ -363,11 +357,6 @@
         <span id="w_68" class="ocr_word" title="bbox 1795 776 1898 824" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">δισχιλίους</ins>
-          </span>
-        </span>
-        <span id="w_69" class="ocr_word" title="bbox 1920 764 2013 850">
-          <span class="alternatives">
-            <ins title="nlp 2.00">|</ins>
           </span>
         </span>
       </span>
@@ -575,19 +564,19 @@
             <ins class="alt" title="nlp 1.00">αὐτῷ</ins>
           </span>
         </span>
-        <span id="w_112" class="ocr_word" title="bbox 1337 1160 1669 1230" lang="grc">
+        <span id="w_112_0" class="ocr_word" title="bbox 1337 1160 1669 1230">
           <span class="alternatives">
-            <ins title="nlp 2.00">( βεστιαρίτας </ins>
+            <ins class="alt" title="nlp 2.00">(βεστιαρίτας</ins>
+          </span>
+        </span>
+        <span id="w_112_1" class="ocr_word" title="bbox 1337 1160 1669 1230">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_113" class="ocr_word" title="bbox 1707 1183 1738 1227" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἡ</ins>
-          </span>
-        </span>
-        <span id="w_114" class="ocr_word" title="bbox 1779 1152 2014 1238" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">συνήθεια</ins>
           </span>
         </span>
       </span>
@@ -1128,13 +1117,7 @@
         </span>
         <span id="w_222" class="ocr_word" title="bbox 1199 2170 1483 2229" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διελθόντος</ins>
-          </span>
-        </span>
-        <span id="w_223" class="ocr_word" title="bbox 1497 2187 1507 2197">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins class="alt" title="nlp 2.00">διελθόντος·</ins>
           </span>
         </span>
         <span id="w_224" class="ocr_word" title="bbox 1548 2190 1573 2220" lang="grc">
