--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0169.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0169.html
@@ -701,14 +701,14 @@
             <ins class="alt" title="nlp 1.00">πύργου</ins>
           </span>
         </span>
-        <span id="w_135" class="ocr_word" title="bbox 1708 1418 1798 1448" lang="grc">
+        <span id="w_135_0" class="ocr_word" title="bbox 1708 1418 1798 1448">
           <span class="alternatives">
-            <ins title="nlp 2.00">καταστήσας</ins>
+            <ins class="alt" title="nlp 2.00">κα-</ins>
           </span>
         </span>
-        <span id="w_136" class="ocr_word" title="bbox 1824 1410 1863 1444">
+        <span id="w_135_1" class="ocr_word" title="bbox 1708 1418 1798 1448">
           <span class="alternatives">
-            <ins title="nlp 2.00">15</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -718,9 +718,14 @@
             <ins title="nlp 2.00">D</ins>
           </span>
         </span>
-        <span id="w_139" class="ocr_word" title="bbox 381 1470 448 1521" lang="grc">
+        <span id="w_139_0" class="ocr_word" title="bbox 381 1470 448 1521">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δι’</ins>
+            <ins class="alt" title="nlp 2.00">ταστήσας</ins>
+          </span>
+        </span>
+        <span id="w_139_1" class="ocr_word" title="bbox 381 1470 448 1521">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">δι᾿</ins>
           </span>
         </span>
         <span id="w_140" class="ocr_word" title="bbox 480 1478 595 1538" lang="grc">
