--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0157.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0157.html
@@ -78,16 +78,21 @@
             <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
-        <span id="w_13" class="ocr_word" title="bbox 1682 296 1800 343" lang="grc">
+        <span id="w_13_0" class="ocr_word" title="bbox 1682 296 1800 343">
           <span class="alternatives">
-            <ins title="nlp 2.00">ΒαΪμοῦντον</ins>
+            <ins class="alt" title="nlp 2.00">Βαϊ-</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 55 367 1802 437">
-        <span id="w_14" class="ocr_word" title="bbox 55 385 86 416">
+        <span id="w_14_0" class="ocr_word" title="bbox 55 385 86 416">
           <span class="alternatives">
-            <ins title="nlp 2.00">Β</ins>
+            <ins class="alt" title="nlp 2.00">Β</ins>
+          </span>
+        </span>
+        <span id="w_14_1" class="ocr_word" title="bbox 55 385 86 416">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">μοῦντον</ins>
           </span>
         </span>
         <span id="w_16" class="ocr_word" title="bbox 359 388 530 433" lang="grc">
@@ -728,9 +733,14 @@
             <ins class="alt" title="nlp 1.00">ἐπῆρτο</ins>
           </span>
         </span>
-        <span id="w_141" class="ocr_word" title="bbox 412 1453 594 1519" lang="grc">
+        <span id="w_141_0" class="ocr_word" title="bbox 412 1453 594 1519">
           <span class="alternatives">
-            <ins title="nlp 2.00">πολύς ,</ins>
+            <ins class="alt" title="nlp 2.00">πολύς,</ins>
+          </span>
+        </span>
+        <span id="w_141_1" class="ocr_word" title="bbox 412 1453 594 1519">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_142" class="ocr_word" title="bbox 645 1458 874 1521" lang="grc">
@@ -746,11 +756,6 @@
         <span id="w_144" class="ocr_word" title="bbox 1299 1456 1630 1506" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐθεοκλύτουν</ins>
-          </span>
-        </span>
-        <span id="w_145" class="ocr_word" title="bbox 1676 1455 1800 1506" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θεὸν</ins>
           </span>
         </span>
       </span>
@@ -1114,9 +1119,9 @@
             <ins class="alt" title="nlp 1.00">τόπων</ins>
           </span>
         </span>
-        <span id="w_217" class="ocr_word" title="bbox 1727 2074 1796 2136" lang="grc">
+        <span id="w_217_0" class="ocr_word" title="bbox 1727 2074 1796 2136">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐζ-</ins>
+            <ins class="alt" title="nlp 2.00">ἐξέστησαν</ins>
           </span>
         </span>
       </span>
@@ -1124,11 +1129,6 @@
         <span id="w_218" class="ocr_word" title="bbox 35 2172 76 2205">
           <span class="alternatives">
             <ins title="nlp 2.00">82</ins>
-          </span>
-        </span>
-        <span id="w_219" class="ocr_word" title="bbox 100 2153 307 2218" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἔστησαν</ins>
           </span>
         </span>
         <span id="w_220" class="ocr_word" title="bbox 353 2174 436 2205" lang="grc">
@@ -1245,9 +1245,14 @@
             <ins class="alt" title="nlp 1.00">γε</ins>
           </span>
         </span>
-        <span id="w_243" class="ocr_word" title="bbox 1338 2308 1555 2372" lang="grc">
+        <span id="w_243_0" class="ocr_word" title="bbox 1338 2308 1555 2372">
           <span class="alternatives">
-            <ins title="nlp 2.00">σκάφος ,</ins>
+            <ins class="alt" title="nlp 2.00">σκάφος,</ins>
+          </span>
+        </span>
+        <span id="w_243_1" class="ocr_word" title="bbox 1338 2308 1555 2372">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_244" class="ocr_word" title="bbox 1596 2326 1650 2357" lang="grc">
@@ -1258,11 +1263,6 @@
         <span id="w_245" class="ocr_word" title="bbox 1688 2328 1724 2356" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ᾧ</ins>
-          </span>
-        </span>
-        <span id="w_246" class="ocr_word" title="bbox 1765 2327 1791 2357" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
           </span>
         </span>
       </span>
@@ -1344,9 +1344,9 @@
             <ins class="alt" title="nlp 1.00">πλωτῆρσι</ins>
           </span>
         </span>
-        <span id="w_264" class="ocr_word" title="bbox 1633 2481 1792 2529" lang="grc">
+        <span id="w_264_0" class="ocr_word" title="bbox 1633 2481 1792 2529">
           <span class="alternatives">
-            <ins title="nlp 2.00">παρα-</ins>
+            <ins class="alt" title="nlp 2.00">παραδόξως.</ins>
           </span>
         </span>
       </span>
@@ -1354,11 +1354,6 @@
         <span id="w_265" class="ocr_word" title="bbox 36 2562 75 2596">
           <span class="alternatives">
             <ins title="nlp 2.00">99</ins>
-          </span>
-        </span>
-        <span id="w_266" class="ocr_word" title="bbox 98 2542 266 2606" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">δόζως.</ins>
           </span>
         </span>
         <span id="w_267" class="ocr_word" title="bbox 330 2550 540 2604" lang="grc">
@@ -1423,9 +1418,14 @@
             <ins class="alt" title="nlp 1.00">ἄλλα</ins>
           </span>
         </span>
-        <span id="w_279" class="ocr_word" title="bbox 655 2620 791 2686" lang="grc">
+        <span id="w_279_0" class="ocr_word" title="bbox 655 2620 791 2686">
           <span class="alternatives">
-            <ins title="nlp 2.00">τινά ,</ins>
+            <ins class="alt" title="nlp 2.00">τινά,</ins>
+          </span>
+        </span>
+        <span id="w_279_1" class="ocr_word" title="bbox 655 2620 791 2686">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_280" class="ocr_word" title="bbox 833 2622 880 2681" lang="grc">
@@ -1451,11 +1451,6 @@
         <span id="w_284" class="ocr_word" title="bbox 1394 2637 1480 2668" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
-          </span>
-        </span>
-        <span id="w_285" class="ocr_word" title="bbox 1501 2615 1793 2685" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Ῥομπέρτου</ins>
           </span>
         </span>
       </span>
