--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0170.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0170.html
@@ -490,9 +490,9 @@
             <ins class="alt" title="nlp 1.00">τινων</ins>
           </span>
         </span>
-        <span id="w_95" class="ocr_word" title="bbox 1575 1013 1888 1079" lang="grc">
+        <span id="w_95_0" class="ocr_word" title="bbox 1575 1013 1888 1079">
           <span class="alternatives">
-            <ins title="nlp 2.00">λαξευτηρίω</ins>
+            <ins class="alt" title="nlp 2.00">λαξευτηρίων</ins>
           </span>
         </span>
       </span>
@@ -771,8 +771,7 @@
         </span>
         <span id="w_152" class="ocr_word" title="bbox 1923 1584 1972 1619">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V;</ins>
-            <del title="nlp 0.90">V;</del>
+            <ins title="nlp 2.00">V.</ins>
           </span>
         </span>
       </span>
